--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --check './**/*.{js,jsx,ts,tsx,css,md,json}'",
+    "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}'"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -26,7 +29,8 @@
     "nodemailer": "^6.10.1",
     "prisma": "^6.13.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tslint": "^5.20.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,8 +38,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-config-next": "^15.4.5",
+    "eslint-plugin-prettier": "^5.5.3",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "typescript": "^5"
