--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "db:seed": "tsx prisma/seed.ts",
     "lint:fix": "next lint --fix",
     "format": "prettier --check './**/*.{js,jsx,ts,tsx,css,md,json}'",
-    "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}'"
+    "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}'",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -43,6 +44,9 @@
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
